--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="hi">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="rI1G9vIFxsOe1FW1533q-seCAd6E23_nfDfBz-HEQhE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Busy Life Se Pareshan Hain? Time Management Tips</title>
     <link rel="stylesheet" href="style.css">
@@ -114,3 +115,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
